more cleaning up